--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,7 +1,10 @@
 /* You can add global styles to this file, and also import other style files */
+
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap');
+
 :root {
-  --blue-1: #2242c2;
-  --blue-2: #0368ec;
+  --blue-1: #AED6F1;
+  --blue-2: #5DADE2;
   --white: #fff;
   --grey-1: #ededed;
   --shadow-dark: rgba(0, 0, 0, 0.3);
@@ -12,12 +15,13 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  // overflow: hidden;
 }
 
 body {
-  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  font-family: Poppins , Geneva, Tahoma, sans-serif;
   font-size: 16px;
-  width: 100%;
+  width: 100vw;
   height: 100%;
   background-color: var(--blue-1);
   display: flex;
@@ -26,16 +30,16 @@ body {
 }
 
 fa-icon {
-  color: #ffffff;
+  color: var(--blue-1);
 }
 
 .container {
-  width: 500px;
-  height: 80vh;
+  max-width: 500px;
+  height: 100%;
   background-color: var(--blue-2);
   border-radius: 20px;
   box-shadow: 10px 10px 10px var(--shadow-dark);
-  margin-top: 3rem;
+  margin: 5px;
 }
 
 .upper-data {
@@ -45,6 +49,7 @@ fa-icon {
   height: 50%;
   border-top-left-radius: 20px;
   border-top-right-radius: 20px;
+  padding: 32px 0;
 }
 
 .lower-data {
@@ -88,7 +93,7 @@ fa-icon {
   color: var(--white);
   font-size: 4em;
   text-align: center;
-  font-weight: 900;
+  font-weight: 700;
 }
 
 .more-info-label {
@@ -102,12 +107,11 @@ fa-icon {
 }
 
 .more-info-container {
-  flex: 1;
+  display: flex;
+  flex-wrap: wrap;
+
   background-color: var(--shadow-dark);
-  border-bottom-left-radius: 20px;
-  border-bottom-right-radius: 20px;
-  border-top-left-radius: 20px;
-  border-top-right-radius: 20px;
+  border-radius: 20px;
   margin-top: 1em;
   margin-bottom: 1em;
   margin-left: 1em;
@@ -145,6 +149,8 @@ fa-icon {
   justify-content: flex-start;
   align-items: center;
   color: var(--white);
+  font-size: 24px;
+  font-weight: 700;
 }
 
 .search {
@@ -165,4 +171,14 @@ fa-icon {
 }
 .search-icon {
   margin-left: 1em;
+  color: var(--shadow-dark);
+}
+
+
+@media only screen and (max-width: 350px) {
+  .info-block {
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
 }
